--- a/Hahn.ApplicatonProcess.December2020.Web/appsettings.json
+++ b/Hahn.ApplicatonProcess.December2020.Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "app": {
+    "dbType": "InMemory",
+    "connectionString": "ApplicationDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
