Update -Serilog Integration -FluentValidation Integration

--- a/Hahn.ApplicatonProcess.December2020.Web/appsettings.json
+++ b/Hahn.ApplicatonProcess.December2020.Web/appsettings.json
@@ -3,12 +3,7 @@
     "dbType": "InMemory",
     "connectionString": "ApplicationDb"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+  "logger": {
+    "filename": "logs"
+  }
 }
