Update -i18n Integration -FluentValidation Update

--- a/Hahn-ApplicatonProcess-December2020-ClientApp/package.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/package.json
@@ -8,8 +8,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.3",
-    "aurelia-animator-css": "^1.0.4"
+    "aurelia-i18n": "^3.1.4",
+    "bootstrap": "^4.6.0",
+    "i18next": "^19.8.4",
+    "i18next-xhr-backend": "^3.2.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
