--- a/Hahn-ApplicatonProcess-December2020-ClientApp/package.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.3",
+    "aurelia-http-client": "^1.3.1",
     "aurelia-i18n": "^3.1.4",
     "bootstrap": "^4.6.0",
     "i18next": "^19.8.4",
