--- a/Hahn-ApplicatonProcess-December2020-ClientApp/tsconfig.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/tsconfig.json
@@ -14,6 +14,8 @@
       "es2015",
       "dom"
     ],
+    "paths": {
+    },
     "moduleResolution": "node",
     "baseUrl": "src",
     "resolveJsonModule": true,
