--- a/Hahn.ApplicatonProcess.December2020.Web/Properties/launchSettings.json
+++ b/Hahn.ApplicatonProcess.December2020.Web/Properties/launchSettings.json
@@ -12,14 +12,14 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Hahn.ApplicatonProcess.December2020.Web": {
       "commandName": "Project",
       "launchBrowser": false,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:7000"
     },
