--- a/Hahn-ApplicatonProcess-December2020-ClientApp/package.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/package.json
@@ -16,7 +16,8 @@
     "i18next": "^19.8.4",
     "i18next-xhr-backend": "^3.2.2",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "tsconfig-paths-webpack-plugin": "^3.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
