--- a/Hahn-ApplicatonProcess-December2020-ClientApp/tsconfig.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/tsconfig.json
@@ -14,7 +14,10 @@
       "es2015",
       "dom"
     ],
-    "paths": {
+    "paths": {      
+      "@environment": ["../config/environment.json"],
+      "@helpers/*":["./helpers/*"],
+      "@services/*": ["./services/*"]
     },
     "moduleResolution": "node",
     "baseUrl": "src",
