Update -Router binding is not necessary -UI Update -Simple Form Example -Api Response & Applicant Models -Fixes

--- a/Hahn-ApplicatonProcess-December2020-ClientApp/tsconfig.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/tsconfig.json
@@ -17,7 +17,8 @@
     "paths": {      
       "@environment": ["../config/environment.json"],
       "@helpers/*":["./helpers/*"],
-      "@services/*": ["./services/*"]
+      "@services/*": ["./services/*"],
+      "@models/*": ["./models/*"]
     },
     "moduleResolution": "node",
     "baseUrl": "src",
