End of the Day -Form Reset Button Feature -Fixes/Renaming

--- a/Hahn-ApplicatonProcess-December2020-ClientApp/tsconfig.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/tsconfig.json
@@ -17,6 +17,7 @@
     "paths": {      
       "@environment": ["../config/environment.json"],
       "@helpers/*":["./helpers/*"],
+      "@constants":["./constants/constants"],
       "@services/*": ["./services/*"],
       "@models/*": ["./models/*"]
     },
