Update -Validation -Localized Validation Error Strings (from server) -Fixes

--- a/Hahn-ApplicatonProcess-December2020-ClientApp/.vscode/settings.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/.vscode/settings.json
@@ -7,6 +7,5 @@
   "typescript.preferences.quoteStyle": "single",
   "javascript.preferences.quoteStyle": "single",
   "prettier.quoteProps": "preserve",
-  "aurelia.autocomplete.quotes": "single",
-  "prettier.enable": false
+  "aurelia.autocomplete.quotes": "single"
 }
