Update -simple aurelia-dialog integration -Applicant list moved from home to new component

--- a/Hahn-ApplicatonProcess-December2020-ClientApp/tsconfig.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/tsconfig.json
@@ -19,7 +19,8 @@
       "@helpers/*":["./helpers/*"],
       "@constants":["./constants/constants"],
       "@services/*": ["./services/*"],
-      "@models/*": ["./models/*"]
+      "@models/*": ["./models/*"],
+      "@sharedcomponents/*": ["./components/shared/*"],
     },
     "moduleResolution": "node",
     "baseUrl": "src",
