Update -Validation Response fix -Code Cleanup -Redirecting to view after sending the form

--- a/Hahn-ApplicatonProcess-December2020-ClientApp/.vscode/settings.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/.vscode/settings.json
@@ -6,6 +6,5 @@
   "prettier.singleQuote": true,
   "typescript.preferences.quoteStyle": "single",
   "javascript.preferences.quoteStyle": "single",
-  "prettier.quoteProps": "preserve",
-  "aurelia.autocomplete.quotes": "single"
+  "prettier.quoteProps": "preserve"
 }
