Update -Code cleanup -Small UI fixes -Aurelia app is built. -Added Readme.md -Dockerfile updated (nuget has some ssl errors on some images)

--- a/Hahn.ApplicatonProcess.December2020.Web/Properties/launchSettings.json
+++ b/Hahn.ApplicatonProcess.December2020.Web/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     },
     "Hahn.ApplicatonProcess.December2020.Web": {
       "commandName": "Project",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       },
