--- a/Hahn.ApplicatonProcess.December2020.Web/appsettings.json
+++ b/Hahn.ApplicatonProcess.December2020.Web/appsettings.json
@@ -1,10 +1,11 @@
 {
   "app": {
     "dbType": "InMemory",
-    "connectionString": "ApplicationDb"
+    "connectionString": "ApplicationDb",
+    "spaDevelopmentServer": "http://localhost:8080"
   },
   "logger": {
-    "filename": "logs"
+    "filename": "log"
   },
   "AllowedHosts": "*"
 }
